# OrbitVision

./: .gitignore  .gitmodules  LICENSE  NOTICE  README.md  requirements.txt  setup.bat
.github/ISSUE_TEMPLATE/: new-model.md
inference/: CMakeLists.txt  README.md  main.cpp  model_320x320.tflite
training/: README.md
training/original_models/ssd_mobilenet_v2_320x320_coco17_tpu-8/: pipeline.config
training/scripts/: convert_to_tflite.py  create_tf_record.py  generate_project.py  pad_images.py  partition_dataset.py  tflite_model_validate.py
training/workspace/FRC_2019/annotations/: label_map.pbtxt
